<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/stall_5"
    tools:context=".activities.MenuActivity"
    android:background="@color/beige">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/japanese"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="30dp"
                android:text="@string/japanese"/>

            <!--first item-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginRight="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/japitem1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/jap_item_1"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <ImageView
                        android:layout_width="274dp"
                        android:layout_height="106dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/jap_img_1" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left"
                            android:layout_marginLeft="10dp"
                            android:text="@string/ing"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            android:textStyle="bold"/>

                        <TextView
                            android:id="@+id/japprice1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="right"
                            android:text="@string/jap_price_1"
                            android:textColor="@color/black"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="left"
                        android:layout_marginTop="3dp"
                        android:textSize="16sp"
                        android:text="@string/jap_des_1"/>

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="25dp"
                        android:layout_gravity="center"
                        android:src="@drawable/menudivider" />
                </LinearLayout>
            </LinearLayout>

            <!-- new item -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/japitem2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/jap_item_2"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <ImageView
                        android:layout_width="274dp"
                        android:layout_height="106dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/jap_img_2" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left"
                            android:layout_marginLeft="10dp"
                            android:text="@string/ing"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            android:textStyle="bold"/>

                        <TextView
                            android:id="@+id/japprice2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="right"
                            android:text="@string/jap_price_2"
                            android:textColor="@color/black"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="left"
                        android:layout_marginTop="3dp"
                        android:textSize="16sp"
                        android:text="@string/jap_des_2"/>

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="25dp"
                        android:layout_gravity="center"
                        android:src="@drawable/menudivider" />
                </LinearLayout>
            </LinearLayout>


            <!-- new item -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/japitem3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/jap_item_3"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <ImageView
                        android:layout_width="274dp"
                        android:layout_height="106dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/jap_img_3" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left"
                            android:layout_marginLeft="10dp"
                            android:text="@string/ing"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            android:textStyle="bold"/>

                        <TextView
                            android:id="@+id/japprice3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="right"
                            android:text="@string/jap_price_3"
                            android:textColor="@color/black"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="left"
                        android:layout_marginTop="3dp"
                        android:textSize="16sp"
                        android:text="@string/jap_des_3"/>

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="25dp"
                        android:layout_gravity="center"
                        android:src="@drawable/menudivider" />
                </LinearLayout>
            </LinearLayout>


            <!-- new item -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/japitem4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/jap_item_4"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <ImageView
                        android:layout_width="274dp"
                        android:layout_height="106dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/jap_img_4" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left"
                            android:layout_marginLeft="10dp"
                            android:text="@string/ing"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            android:textStyle="bold"/>

                        <TextView
                            android:id="@+id/japprice4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="right"
                            android:text="@string/jap_price_4"
                            android:textColor="@color/black"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="left"
                        android:layout_marginTop="3dp"
                        android:textSize="16sp"
                        android:text="@string/jap_des_4"/>

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="25dp"
                        android:layout_gravity="center"
                        android:src="@drawable/menudivider" />
                </LinearLayout>
            </LinearLayout>


            <!-- new item -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/japitem5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/jap_item_5"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <ImageView
                        android:layout_width="274dp"
                        android:layout_height="106dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/jap_img_5" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left"
                            android:layout_marginLeft="10dp"
                            android:text="@string/ing"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            android:textStyle="bold"/>

                        <TextView
                            android:id="@+id/japprice5"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="right"
                            android:text="@string/jap_price_5"
                            android:textColor="@color/black"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="left"
                        android:layout_marginTop="3dp"
                        android:textSize="16sp"
                        android:text="@string/jap_des_5"/>

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="25dp"
                        android:layout_gravity="center"
                        android:src="@drawable/menudivider" />
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/return_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Back to list of stores" />

        </LinearLayout>


    </LinearLayout>

</ScrollView>